# DeepSpeed-MII

./: pyproject.toml  setup.py
.github/workflows/: formatting.yml  nv-v100-legacy.yml
mii/entrypoints/: data_models.py
