[build-system]
requires = [
    "build",
    "setuptools>=64",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "deepspeed-mii"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {file = ["version.txt"]}
dependencies = {file = ["requirements/requirements.txt"]}

[project.optional-dependencies]
dev = {file = ["requirements/requirements-dev.txt"]}
