[build-system]
requires = [
    "build",
    "setuptools>=64",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "deepspeed-mii"
dynamic = ["version"]
description = "deepspeed mii"
authors = [{name = "DeepSpeed Team", email = "deepspeed-mii@microsoft.com"}]
dependencies = [
    "accelerate",
    "asyncio",
    "deepspeed>=0.15.0",
    "deepspeed-kernels",
    "fastapi",
    "fastchat",
    "Flask-RESTful",
    "grpcio",
    "grpcio-tools",
    "Pillow",
    "pydantic>=2.0.0",
    "pyzmq",
    "safetensors",
    "shortuuid",
    "torch",
    "transformers",
    "ujson",
    "Werkzeug"
]

[project.optional-dependencies]
dev = [
    "clang-format==18.1.3",
    "einops",
    "pre-commit>=2.20.0",
    "pytest",
    "pytest-forked",
    "sentencepiece",
    "tiktoken",
    "transformers-stream-generator"
]

[project.urls]
Documentation = "https://github.com/deepspeedai/DeepSpeed-MII"
Source = "https://github.com/deepspeedai/DeepSpeed-MII"

[tool.setuptools.dynamic]
version = {file = ["version.txt"]}

[tool.setuptools]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.package-data]
long_description = {file = "README.md"}
long_description_content_type = "text/markdown"

[tool.setuptools.packages]
find = true
exclude = ["tests"]
